<resources>
  <string name="app_name">My Application</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="delete">Delete Key</string>
  <string name="encrypt">Encrypt Key</string>
  <string name="decrypt">Decrypt key</string>
  <string name="key_alias">Key Alias</string>
  <string name="generate">Generate New Key</string>
  <string name="initial_text">Initial Text</string>
  <string name="final_text">Final Text</string>
  <string name="decrypt_result">Decrypted Result</string>
</resources>
