<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

  <EditText
      android:id="@+id/aliasText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:hint="@string/key_alias"
      />

  <Button
      android:id="@+id/generateKeyPair"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_below="@id/aliasText"
      android:layout_centerHorizontal="true"
      android:text="@string/generate"
      />

  <EditText
      android:id="@+id/startText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/generateKeyPair"
      android:layout_centerHorizontal="true"
      android:hint="@string/initial_text"
      />

  <EditText
      android:id="@+id/encryptedText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/startText"
      android:layout_centerHorizontal="true"
      android:editable="false"
      android:hint="@string/final_text"
      android:textIsSelectable="true"
      />

  <EditText
      android:id="@+id/decryptedText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/encryptedText"
      android:layout_centerHorizontal="true"
      android:editable="false"
      android:hint="@string/decrypt_result"
      android:textIsSelectable="true"
      />

</RelativeLayout>